--- a/inst/rmarkdown/templates/report/skeleton/examNord.sty
+++ b/inst/rmarkdown/templates/report/skeleton/examNord.sty
@@ -83,6 +83,23 @@
 \renewcommand{\aids}{Penn, linjal, enkel kalkulator og inntil 2 stk tospråklige ordbøker.}
 \renewcommand{\Cheating}{Fusk eller forsøk på fusk ved eksamen kan medføre annullering av eksamen og utestengning, jf. studie- og eksamensforskriften § 9-1.}
 \renewcommand{\Grounds}{Studenter kan kreve begrunnelse for vurderingen av sine eksamensprestasjoner. Fristen er en uke fra karakteren ble kunngjort.}
+\fancypagestyle{main}{%\fancyhf
+\fancyhead[R]{Side \textbf{\thepage} av \textbf{\pageref{LastP}}}
+\fancyhead[L]{\includegraphics[width=4cm]{logo_NORD}}
+\fancyfoot[C]{\iffloatpage{}}
+\renewcommand{\headrulewidth}{0pt}
+\setlength{\headheight}{45pt}
+}
+
+\fancypagestyle{append}{%\fancyhf
+\fancyhead[R]{Side \textbf{\thepage}}
+\fancyhead[C]{\large\bfseries\MakeUppercase{Attachments}}
+\fancyhead[L]{\includegraphics[width=4cm]{logo_NORD}}
+\fancyfoot[C]{\iffloatpage{}}
+\renewcommand{\headrulewidth}{0pt}
+\setlength{\headheight}{45pt}
+}
+
 }
 
 
