--- a/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
@@ -37,6 +37,7 @@ knitr::opts_chunk$set(echo = TRUE)
 <!-- Specify which attachments are included. --> 
 <!-- \ListAttach[] -->
 
+<!-- \inNorwegian -->
 
 \input{frontpage}
 
