--- a/inst/rmarkdown/templates/report/skeleton/frontpage.tex
+++ b/inst/rmarkdown/templates/report/skeleton/frontpage.tex
@@ -6,36 +6,7 @@
 \begin{small}
 \centering
 %\tikz{\node[left](Faculty) at (-4,0) {%
-		\begin{tabular}{p{4cm} p{11cm}}
-		\textbf{Faculty:} & \Fac\\
-
-		\textbf{Subject code and subject name:} & \Title\\
-
-		\textbf{Academic responsible:} & \Author\\
-
-		\textbf{Date:} & \Date\\
-
-		\textbf{Time:} & \clocktime\\
-
-		\textbf{Grading deadline:} & \GrDeadline\\
-
-		\textbf{Allowed aids:} & \aids\\
-
-		\textbf{Grading scale:} & \Grads\\
-
-		\textbf{Grounds:} & \textit{\Grounds}\\
-
-		\textbf{Cheating:} & \textit{\Cheating}\\
-
-		\ListAtt
-
-		\textbf{Number of pages:} & \pageref{LastP}\\
-
-		\textbf{Number of attachments:} & \numAtt\\
-
-
-		\end{tabular}
-%	};}
+		\titlepageEN
 \end{small}
 
 \newpage
