--- a/inst/rmarkdown/templates/report/skeleton/examNord.sty
+++ b/inst/rmarkdown/templates/report/skeleton/examNord.sty
@@ -59,7 +59,7 @@
 
 \def\listAtt{}
 \def\ListAtt{}
-\def\ListAttach[#1]{%
+\newcommand\ListAttach[#1]{%
     \renewcommand{\listAtt}{#1}
     \renewcommand{\ListAtt}{\textbf{Attachments:} & \listAtt\\}
 }
@@ -105,7 +105,7 @@
 \def\inNorwegian{
 \titleformat{\section}[hang]{}{\large\bfseries\MakeUppercase{Oppgave}\ \thesection\ }{0pt}{}[]
 \titleformat{\subsection}[hang]{}{\large\bfseries\MakeUppercase{Vedlegg}\ \thesubsection\ }{0pt}{\normalfont}[]
-\renewcommand{\ListAttach}[1]{%
+\renewcommand{\ListAttach}[#1]{%
     \renewcommand{\listAtt}{#1}
     \renewcommand{\ListAtt}{\textbf{Vedlegg:} & \listAtt\\}
 }
