--- a/inst/rmarkdown/templates/report/skeleton/examNord.sty
+++ b/inst/rmarkdown/templates/report/skeleton/examNord.sty
@@ -122,7 +122,7 @@
 
 \fancypagestyle{append}{%\fancyhf
 \fancyhead[R]{Side \textbf{\thepage}}
-\fancyhead[C]{\large\bfseries\MakeUppercase{Attachments}}
+\fancyhead[C]{\large\bfseries\MakeUppercase{Vedlegg}}
 \fancyhead[L]{\includegraphics[width=5cm]{logo_NORD}}
 \fancyfoot[C]{\iffloatpage{}}
 \renewcommand{\headrulewidth}{0pt}
