--- a/inst/rmarkdown/templates/report/skeleton/examNord.sty
+++ b/inst/rmarkdown/templates/report/skeleton/examNord.sty
@@ -114,25 +114,25 @@
 \renewcommand{\Grounds}{Studenter kan kreve begrunnelse for vurderingen av sine eksamensprestasjoner. Fristen er en uke fra karakteren ble kunngjort.}
 \fancypagestyle{main}{%\fancyhf
 \fancyhead[R]{Side \textbf{\thepage} av \textbf{\pageref{LastP}}}
-\fancyhead[L]{\includegraphics[width=5cm]{logo_NORD}}
+\fancyhead[L]{\includegraphics[width=4.5cm]{logo_NORD}}
 \fancyfoot[C]{\iffloatpage{}}
 \renewcommand{\headrulewidth}{0pt}
-\setlength{\headheight}{45pt}
+\setlength{\headheight}{75pt}
 }
 
 \fancypagestyle{append}{%\fancyhf
 \fancyhead[R]{Side \textbf{\thepage}}
 \fancyhead[C]{\large\bfseries\MakeUppercase{Vedlegg}}
-\fancyhead[L]{\includegraphics[width=5cm]{logo_NORD}}
+\fancyhead[L]{\includegraphics[width=4.5cm]{logo_NORD}}
 \fancyfoot[C]{\iffloatpage{}}
 \renewcommand{\headrulewidth}{0pt}
-\setlength{\headheight}{45pt}
+\setlength{\headheight}{75pt}
 }
 \renewcommand{\Fac}{Handelhøgskolen}
 \renewcommand{\Typeexm}{SkoleEksamen}
 \renewcommand{\titlepageEN}{
 		\begin{tabular}{p{4cm} p{11cm}}
-		\textbf{Facultet:} & \Fac\\
+		\textbf{Fakultet:} & \Fac\\
 
 		\textbf{Emnekode og emnenavn:} & \Title\\
 
